# pptx-rs

./: Cargo.toml  LICENSE  README.md  _clippy_full.txt
benches/: large_pptx.rs  save_pptx.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  OOXML_REFERENCE.md  TESTING.md  TODO_GAP_ANALYSIS.md
examples/: chart_demo.rs  connector_demo.rs  hello_pptx.rs  media_demo.rs  ole_demo.rs  protect_ppt.rs  protect_pptx.rs  shapes_demo.rs  test_copy_ppt.rs  test_pictures_encryption.rs  text_format_demo.rs  watermark_and_protect.rs  watermark_and_protect_ppt.rs  watermark_ppt.rs  watermark_pptx.rs
pyscripts/: analyze_client_data.py  analyze_dataspaces.py  analyze_decrypt_issue.py  analyze_decrypted_structure.py  analyze_dir.py  analyze_encryption.py  analyze_generated_files.py  analyze_ole.py  analyze_original_spcontainer.py  analyze_persist_detail.py  analyze_persist_order.py  analyze_pictures_stream.py  analyze_ppdrawing.py  analyze_ppt.py  analyze_ppt_structure.py  analyze_record_types.py  analyze_reference.py  analyze_sp2.py  analyze_sp_output.txt  analyze_spcontainer.py  analyze_spcontainer_deep.py  analyze_spcontainer_detail.py  analyze_textbox.py  analyze_wm_file.py  apache_poi_encrypted.java  check_crypt_detail.py  check_crypt_session.py  check_decrypted_structure.py  check_ei_version.py  check_encrypted_layout.py  check_encrypted_structure.py  check_layout.py  check_ole_health.py  check_ole_structure.py  check_persist_gaps.py  check_persist_order.py  check_pics_decrypt.py  check_pictures_stream.py  check_ppt_structure.py  check_protect.py  (+90 more)
src/: crypto.rs  error.rs  lib.rs  notes_masters.rs  presentation.rs  slide.rs  slide_layouts.rs  slide_masters.rs  (+1 more)
(+62 files in other folders)
