[package]
name = "pptx-rs2"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
description = "Rust 版本的 PowerPoint .pptx 读写库, 对标 python-pptx"
license = "MIT"
readme = "README.md"
keywords = ["pptx", "powerpoint", "office-open-xml", "opc", "drawingml"]
categories = ["parser-implementations", "encoding"]
repository = "https://github.com/WenTao-Love/pptx-rs"
homepage = "https://github.com/WenTao-Love/pptx-rs"
documentation = "https://docs.rs/pptx-rs2"
authors = ["pptx-rs contributors"]
# 发布时排除测试样本、Python 验证脚本、临时文件等非必要资源
exclude = [
    "_test/",
    "_test_out/",
    "pyscripts/",
    ".trae/",
    "docs/",
    "examples/",
    "_ssh_pass.bat",
    "_ssh_run.ps1",
    "check_*.py",
    "gen_ref.py",
    "debug-pptx-output-fail.md",
]

# 显式指定 lib 名为 pptx_rs，使 crate 名（pptx-rs2）与 lib 名解耦：
# - crates.io 上 crate 名为 pptx-rs2（原名 pptx-rs 已被占坑）
# - 代码中 use pptx_rs::... 保持不变，对用户透明
[lib]
name = "pptx_rs"

[dependencies]
zip = { version = "8.6", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.40", features = ["serialize"] }
thiserror = "1.0"
base64 = "0.22"
sha2 = "0.10"
sha1 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
cfb = "0.10"
hmac = "0.12"
rand = "0.8"
uuid = "1"

[dev-dependencies]
tempfile = "3.27"
rand = "0.8"
criterion = "0.5"

# 性能基准测试（TODO-040）：cargo bench 自动发现 benches/ 下文件
[[bench]]
name = "save_pptx"
harness = false

[[bench]]
name = "large_pptx"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# 基准测试专用 profile：保留调试信息以便 perf 分析，但开启优化
[profile.bench]
opt-level = 3
debug = true
